# bicep-generator

./: .env.example  .gitignore  README.md  main.py  requirements.txt
backend/: app.py  constants.py  main.py  pyproject.toml  requirements.txt
backend/i18n/: messages.py
backend/i18n/locales/: en.json  ja.json
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: language-toggle.tsx  modern-bicep-generator.tsx  settings-dialog.tsx  theme-toggle.tsx
frontend/lib/: i18n.ts  phase.ts
frontend/lib/locales/: en.json  ja.json
